# tools

./: .gitignore  .rooignore  AI.md  CLAUDE.md  Cargo.toml  README-技能設計.md  README-統計.md  README-裝備.md  README-設計技能.md  README-設計機制-2.md  README-設計機制.md  README.md  TODO.md  cargo.toml  demo.toml  plan-2.md  plan.md  plan2.md  prompt.md  test_core_coverage.bat  test_core_coverage.sh  towebai.bat
.claude/: settings.local.json
.claude/rules/: core-index.md  core.md  editor-index.md  editor.md
.claude/statusline/: statusline-command.sh
.github/: copilot-instructions.md
.github/instructions/: rules.md.instructions.md
.kilocode/rules/: 編輯器.md  通則.md
.roo/rules/: rules.md
core/: Cargo.toml
core/board/: Cargo.toml
core/board/src/: alias.rs  component.rs  constants.rs  core_types.rs  error.rs  lib.rs  loader.rs  loader_schema.rs  primitive.rs  typ.rs
core/board/src/domain/: alias.rs  battle_log.rs  constants.rs  core_types.rs  mod.rs  turn.rs
core/board/src/ecs_logic/: battle_log.rs  deployment.rs  level_outcome.rs  loader.rs  mod.rs  movement.rs  query.rs  reaction.rs  skill.rs  spawner.rs  turn.rs
core/board/src/ecs_types/: components.rs  resources.rs
core/board/src/logic/: board.rs  debug.rs  id_generator.rs  mod.rs  movement.rs  skill.rs  skill_check.rs  skill_execute.rs  skill_reaction.rs  turn_order.rs  unit_attributes.rs
core/board/src/logic/skill/: line_of_sight.rs  mod.rs  skill_check.rs  skill_execution.rs  skill_range.rs  skill_reaction.rs  skill_target.rs  unit_attributes.rs
core/board/src/system/: mod.rs  movement.rs
core/board/src/test_helpers/: level_builder.rs  mod.rs
core/board/src/test_logic/: mod.rs
core/board/src/test_logic/board/: mod.rs  test_adjacent_penalty.rs  test_collect_move_reactions.rs  test_compute_affected_positions.rs  test_compute_range_positions.rs  test_flanking.rs  test_is_valid_position.rs  test_line_of_sight.rs  test_movement.rs  test_select_skill_targets.rs  test_skill_area.rs  test_skill_execute.rs  test_skill_execution.rs  test_skill_single_execution.rs
core/board/src/test_logic/turn/: mod.rs  test_turn_order.rs
core/board/src/test_logic/unit/: test_attribute.rs  test_id.rs  test_skill_check.rs
core/board/src/types/: board.rs  error.rs  mod.rs  position.rs  unit_map.rs
core/board/tests/: test.rs  test_error.rs  test_test_common.rs
core/board/tests/board/: mod.rs  test_board.rs  test_movement.rs
core/board/tests/common/: mod.rs  scene_builder.rs
core/board/tests/ecs_logic/: constants.rs  deployment.rs  loader.rs  mod.rs  query.rs  spawner.rs  test_buff_ttl.rs  test_deployment.rs  test_level_outcome.rs  test_loader.rs  test_move_reaction_los.rs  test_move_reaction_preview.rs  test_movement.rs  test_query.rs  test_reaction.rs  test_skill.rs  test_skill_list.rs  test_skill_targeting.rs  test_spawner.rs  test_turn.rs
core/board/tests/helpers/: level_builder.rs
core/board/tests/logic/: mod.rs
core/board/tests/logic/board/: mod.rs  test_board.rs  test_collect_move_reactions.rs  test_compute_affected_positions.rs  test_movement.rs  test_select_skill_targets.rs  test_skill_execute.rs
core/board/tests/logic/turn/: test_turn_order.rs
core/board/tests/logic/unit/: mod.rs  test_attribute.rs  test_id.rs  test_skill_check.rs
core/board/tests/test_board/: mod.rs  test_board.rs  test_board_creation.rs
core/board/tests/test_error/: mod.rs  test_error_messages.rs
core/board/tests/test_scene_builder/: mod.rs  test_dimensions.rs  test_error_messages.rs
core/board/tests/unit_attributes/: mod.rs
core/chess-lib/: Cargo.toml
core/chess-lib/src/: ai.rs  battle.rs  board.rs  error.rs  lib.rs  statistics.rs  unit.rs
core/chess-lib/src/action/: algo.rs  mod.rs  movement.rs  reaction.rs  skill.rs
core/chess-lib/src/action/skill/: casting.rs  effect_application.rs  hit_resolution.rs  mod.rs  selection.rs  targeting.rs
core/chess-lib/tests/: board.json  skill_aim.json  skill_magical_attack.json  skill_max_mp.json  skill_physical_attack.json  skill_splash.json  unit.json
core/dialogs-lib/: Cargo.toml
core/dialogs-lib/src/: lib.rs
core/object-lib/: Cargo.toml
core/object-lib/src/: lib.rs
core/skills-lib/: Cargo.toml
core/skills-lib/src/: lib.rs
core/src/: abilities.rs  character.rs  combat.rs  dice.rs  equipment.rs  i18n.rs  lib.rs  skills.rs  spells.rs  traits.rs
core/test-data/: demo-dialogs.toml
docs/: architecture.md  ecs.md  gdext.md
editor/: Cargo.toml
editor/src/: ai.rs  app.rs  boards.rs  common.rs  constants.rs  dialogs.rs  editor_item.rs  editor_macros.rs  generic_editor.rs  generic_io.rs  handlers.rs  main.rs  player_progression.rs  player_progressions.rs  skills.rs  state.rs  ui.rs  units.rs
editor/src/tabs/: level_tab.rs  mod.rs  object_tab.rs  skill_tab.rs  unit_tab.rs
editor/src/tabs/level_tab/: battle.rs  battlefield.rs  deployment.rs  edit.rs  grid.rs  unit_details.rs
editor/src/tests/: generic_io.rs  mod.rs
editor/src/utils/: dnd.rs  mod.rs  search.rs
locales/: en.toml  zh-TW.toml
scripts/: add-dep.py  check_use.py  claude.bat  collect_signatures.py  gemini.sh  test_core.bat  test_core_coverage.bat  test_core_coverage.sh  to_web_ai.bat  uv.bat
shared-lib/: test.bat
shared-lib/chess-lib/: Cargo.toml
shared-lib/dialogs-lib/: Cargo.toml
shared-lib/skills-lib/: Cargo.toml
shared-lib/test-data/: demo-skills.toml  dialogs.toml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  dialog.json
src/js/: api.js  (+2 more)
tools/: Cargo.toml  unit-types.toml
tools/map_generator/: Cargo.toml
tools/map_generator/src/: main.rs
tools/src/: boards.rs  chess.rs  common.rs  dialogs.rs  main.rs  skill_data.rs  skills.rs  unit.rs  units.rs
(+25 files in other folders)
