[workspace]
members = [
    "core/chess-lib",
    "core/dialogs-lib",
    "core/skills-lib",
    "editor",
    "tools/map_generator",
]
resolver = "2"
default-members = ["editor"]

[workspace.dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
toml = "0.8.22"
rand = "0.9"
