[workspace]
members = ["core", "editor"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ray"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

# Random
rand = "0.9"

# UI Framework
eframe = "0.32"
egui = "0.32"
egui_extras = { version = "0.32", features = ["all_loaders"] }

# Utilities
thiserror = "2.0"
anyhow = "1.0"

# PF2e Core
core = { path = "core" }
