[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
skills-lib = { path = "../core/skills-lib" }
dialogs-lib = { path = "../core/dialogs-lib" }
chess-lib = { path = "../core/chess-lib" }

eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
rfd = "0.15.3"
serde = { workspace = true }
toml = { workspace = true }
winapi = "0.3.9"
strum = { workspace = true }
strum_macros = { workspace = true }
rand = "0.8"
indexmap = "2.10.0"
thiserror = { workspace = true }
