[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
board = { version = "0.1.0", path = "../core/board" }
bevy_ecs.workspace = true
eframe = "0.33.3"
egui = "0.33.3"
rfd = "0.17.2"
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
toml.workspace = true
