[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
skills-lib = { path = "../shared-lib/skills-lib" }
dialogs-lib = { path = "../shared-lib/dialogs-lib" }
chess-lib = { path = "../shared-lib/chess-lib" }

eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
rfd = "0.15.3"
serde = "1.0"
toml = "0.8.22"
winapi = "0.3.9"
strum = "0.27.1"
strum_macros = "0.27.1"
rand = "0.8"
