[package]
name = "chess-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
skills-lib = { path = "../../core/skills-lib" }

serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1"
